src/test/lab3/invalid/XX-Fail12.slac
class A {
    var a : Int;
    var b : Bool
}

method main() : Unit = { println("42") }
